fix: caricamento risorse reso universale con getResource